{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 213,
  "lineage": "698149de-6ce8-bc74-8fbc-6356b25f20d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:route-table/rtb-05e95e322cceea998",
            "default_route_table_id": "rtb-05e95e322cceea998",
            "id": "rtb-05e95e322cceea998",
            "owner_id": "495587214902",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f45b170f29c6e937",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "drtb-dev"
            },
            "tags_all": {
              "Name": "drtb-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9fa1e28c7a93047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_viennalife",
            "aws_vpc.vpc_viennalife"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:security-group/sg-09615619193587ea3",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09615619193587ea3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "176.88.88.232/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "495587214902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-sg-dev"
            },
            "tags_all": {
              "Name": "default-sg-dev"
            },
            "vpc_id": "vpc-0d9fa1e28c7a93047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_viennalife"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_type",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:495587214902:instance/i-060c86675d59ddc36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060c86675d59ddc36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ms",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f0983f8b85aff7f",
            "private_dns": "ip-10-0-10-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.88",
            "public_ip": "3.83.218.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c83e8c91ee3b2574",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2e0afebfbe642f0",
            "tags": {
              "Name": "server-dev"
            },
            "tags_all": {
              "Name": "server-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09615619193587ea3"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_viennalife",
            "aws_vpc.vpc_viennalife",
            "data.aws_ami.latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:internet-gateway/igw-0f45b170f29c6e937",
            "id": "igw-0f45b170f29c6e937",
            "owner_id": "495587214902",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Name": "igw-dev"
            },
            "vpc_id": "vpc-0d9fa1e28c7a93047"
          },
          "dependencies": [
            "aws_vpc.vpc_viennalife"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:security-group/sg-053efcc49734924d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053efcc49734924d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "176.88.88.232/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_viennalife",
            "name_prefix": "",
            "owner_id": "495587214902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-dev"
            },
            "tags_all": {
              "Name": "sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9fa1e28c7a93047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_viennalife"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:subnet/subnet-0d2e0afebfbe642f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e0afebfbe642f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495587214902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-01-dev"
            },
            "tags_all": {
              "Name": "subnet-01-dev"
            },
            "vpc_id": "vpc-0d9fa1e28c7a93047"
          },
          "dependencies": [
            "aws_vpc.vpc_viennalife"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_viennalife",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495587214902:vpc/vpc-0d9fa1e28c7a93047",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d364895b55a1441",
            "default_route_table_id": "rtb-05e95e322cceea998",
            "default_security_group_id": "sg-09615619193587ea3",
            "dhcp_options_id": "dopt-00a72ca9a50d69409",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9fa1e28c7a93047",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e95e322cceea998",
            "owner_id": "495587214902",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}